--- a/1_fetch.yml
+++ b/1_fetch.yml
@@ -17,6 +17,7 @@ targets:
     depends: 
       - 1_fetch/out/conus_sf.rds
       - 1_fetch/out/hru.topojson
+      - 1_fetch/log/1_fetch_wbeep_storage_date_tasks.ind
       
   # Dates to visualize
   date_range:
@@ -60,4 +61,9 @@ targets:
       makefile = target_name,
       task_plan = fetch_wbeep_storage_date_tasks,
       remake_file = I('1_fetch.yml'))
-  
+
+  # Execute fetch for each task
+  1_fetch/log/1_fetch_wbeep_storage_date_tasks.ind:
+    command: loop_tasks(
+      task_plan = fetch_wbeep_storage_date_tasks,
+      task_makefile = '1_fetch_wbeep_storage_date_tasks.yml')
